# quac

./: .gitignore  Cargo.toml  README.md  bench.sh
benchmarks/: Cargo.toml
benchmarks/src/: lib.rs  listen.rs  quic_bench.rs  quic_ping.rs  quic_pong_quinn.rs  quic_pong_tile.rs  quinn_client.rs
benchmarks/tests/: quinn_ping_pong.rs
book/: book.toml
book/src/: SUMMARY.md  async-api.md  deployment.md  engine-tile.md  network-tile.md  socket-impls.md  socket.md  tile.md
docs/: NETWORK_TILE.md  SOCKETS.md
quac/: Cargo.toml
quac-interface/: Cargo.toml
quac-interface/src/: lib.rs
quac-network-tile/: Cargo.toml
quac-network-tile-os/: Cargo.toml
quac-network-tile-socket/: Cargo.toml
quac-network-tile-socket/src/: lib.rs
quac-network-tile/examples/: tile-bench-receiver.rs  tile-bench-sender.rs
quac-network-tile/scripts/: bench-profile.sh
quac-network-tile/src/: lib.rs  queue.rs
quac-socket/: Cargo.toml
quac-socket-iouring/: Cargo.toml
quac-socket-iouring/examples/: bench-receiver.rs  bench-sender.rs  iouring-bench-receiver.rs  iouring-bench-sender.rs
quac-socket-iouring/scripts/: bench-profile.sh
quac-socket-iouring/src/: buffers.rs  lib.rs  socket.rs
quac-socket-os/: Cargo.toml
quac-socket-os/examples/: bench-receiver.rs  bench-sender.rs  os-bench-receiver.rs  os-bench-sender.rs
quac-socket-os/scripts/: bench-profile.sh
quac-socket-os/src/: buffers.rs  debug.rs  lib.rs  socket.rs
quac-socket-xdp/: Cargo.toml
quac-socket-xdp-ebpf/: Cargo.toml  README.md  build-ebpf.sh  quac-socket-xdp-prog
quac-socket-xdp-ebpf/src/: lib.rs  main.rs
quac-socket-xdp/examples/: xdp-bench-receiver.rs  xdp-bench-sender.rs  xdp-smoke-test.rs
quac-socket-xdp/src/: buffers.rs  iface.rs  lib.rs  lpm.rs  netlink.rs  program.rs  raw_socket.rs  reclaimer.rs  ring.rs  route.rs  route_monitor.rs  socket.rs  umem.rs
quac-socket/src/: buffer.rs  cpu.rs  lib.rs  mpsc.rs  net.rs  nic.rs  socket.rs
quac-test-socket/: Cargo.toml
quac-test-socket/src/: lib.rs
quac-tile/: Cargo.toml
quac-tile/src/: app_queue.rs  config.rs  connection.rs  endpoint.rs  engine.rs  incoming.rs  lib.rs  router.rs  streams.rs  waker.rs
quac/src/: app.rs  bridge.rs  engine_tile.rs  lib.rs  tile_engine.rs  tileset.rs
quic-proto/: Cargo.toml
quic-proto/src/: cid_quic_lb.rs  crypto.rs  endpoint.rs  lib.rs  packet.rs  shared.rs
quic-proto/src/config/: mod.rs  transport.rs
quic-proto/src/connection/: assembler.rs  mod.rs  packet_crypto.rs
quic-proto/src/crypto/: rustls.rs
quic-proto/src/tests/: app_harness.rs  mod.rs  util.rs
quinn-proto/: Cargo.toml
quinn-proto/src/: endpoint.rs  lib.rs
scripts/: _quic_pong_profile_helpers.sh  _socket_bench_profile_helpers.sh  compare-nic.sh  compare-veth.sh  compare.sh  monitor_nic.sh  profile-nic.sh  profile-veth.sh  profile.sh  profile_iouring_socket_bench.sh  profile_os_socket_bench.sh  profile_quac_bench.sh  profile_quic_pong_tile_connect_churn.sh  profile_quic_pong_tile_stream_ping.sh  setup-nic.sh  setup-veth.sh  smoke-nic.sh
