[workspace]
members = [
    "benchmarks",
    "quac",
    "quac-interface",
    "quac-network-tile-socket",
    "quac-socket",
    "quac-test-socket",
    "quac-tile",
    "quic-proto",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true
