[workspace]
members = [
    "benchmarks",
    "quac-network-tile",
    "quac-socket",
    "quac-socket-iouring",
    "quac-socket-os",
    "quac-test-socket",
    "quinn-proto",
    "quac-tile",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true
