[package]
name = "benchmarks"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "QUIC pong servers and Quinn benchmark clients"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3.4"
quac = { path = "../quac" }
quic-proto = { path = "../quic-proto", default-features = false, features = ["rustls-ring"] }
quinn = "0.11"
rcgen = "0.14"
rustls = { version = "0.23.5", default-features = false, features = ["ring", "std"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

[[bin]]
name = "quic_pong_quinn"
path = "src/quic_pong_quinn.rs"

[[bin]]
name = "quic_bench"
path = "src/quic_bench.rs"

[[bin]]
name = "quic_ping"
path = "src/quic_ping.rs"

[[bin]]
name = "quic_pong_tile"
path = "src/quic_pong_tile.rs"
