[package]
name = "quac-network-tile-os"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OS UDP socket implementation of the NetworkTile trait"

[[bin]]
name = "pong"
path = "src/bin/pong.rs"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-queue = "0.3"
quac-socket = { path = "../quac-socket" }
quac-socket-os = { path = "../quac-socket-os" }
quac-tile = { path = "../quac-tile" }
smallvec = { version = "1", features = ["union"] }
