[package]
name = "quac-network-tile-socket"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OsNetworkTile: implements quac-tile's NetworkTile trait using OS UDP sockets"

[dependencies]
quac-interface = { path = "../quac-interface" }
quac-tile = { path = "../quac-tile" }
quac-socket = { path = "../quac-socket" }
quic-proto = { path = "../quic-proto", default-features = false, features = ["rustls-ring"] }
bytes = "1"
crossbeam-queue = "0.3"
fastrand = "2"
log = "0.4"
smallvec = { version = "1", features = ["union"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
quic-proto = { path = "../quic-proto", default-features = false, features = ["rustls-ring"] }
