[package]
name = "quac-network-tile"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Generic NetworkTile implementation driving any PacketSocket"

[dependencies]
crossbeam-queue = "0.3"
quac-socket     = { path = "../quac-socket" }

[dev-dependencies]
libc                = "0.2"
quac-socket-os      = { path = "../quac-socket-os" }
quac-socket-iouring = { path = "../quac-socket-iouring" }

# AF_XDP backend is Linux-only; gated by target so non-Linux dev builds skip it.
[target.'cfg(target_os = "linux")'.dev-dependencies]
quac-socket-xdp = { path = "../quac-socket-xdp" }
