[package]
name = "quac-socket-os"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OS UDP socket backend implementing quac-socket"

[[bin]]
name = "blaster"
path = "src/bin/blaster.rs"

[[bin]]
name = "listen_bench"
path = "src/bin/listen_bench.rs"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
quac-socket = { path = "../quac-socket" }
smallvec = { version = "1", features = ["union"] }
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
