[package]
name = "quac-socket"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OS UDP socket backend implementing quac-interface"

[dependencies]
bytes = "1"
quac-interface = { path = "../quac-interface" }
smallvec = { version = "1", features = ["union"] }
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
