[package]
name = "quac-socket"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Runtime-agnostic packet socket and buffer-pool traits for QUIC dataplanes"

[dependencies]
smallvec = { version = "1", features = ["union"] }
crossbeam-queue = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
