[package]
name = "quac-test-socket"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "In-memory paired PacketSocket for quac tests"

[dependencies]
bytes = "1"
quac-interface = { path = "../quac-interface" }
smallvec = { version = "1", features = ["union"] }
