[package]
name = "quac-tile"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "NetworkTile trait and SPSC queue packet types for tile-based QUIC dataplanes"

[dependencies]
quac-socket = { path = "../quac-socket" }
bytes = "1"
crossbeam-queue = "0.3"
