[package]
name = "quac"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tile-based async QUIC engine and application API"

[dependencies]
quac-interface = { path = "../quac-interface" }
quac-tile = { path = "../quac-tile" }
quac-network-tile-socket = { path = "../quac-network-tile-socket" }
quic-proto = { path = "../quic-proto", default-features = false, features = ["rustls-ring"] }
bytes = "1"
crossbeam-queue = "0.3"
fastrand = "2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
slab = "0.4"
smallvec = { version = "1", features = ["union"] }
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["rt", "io-util"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
quac-test-socket = { path = "../quac-test-socket" }
rcgen = "0.14"
rustls = { version = "0.23.5", default-features = false, features = ["ring", "std"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
